Fixes: #673 - Left Side drawer and icon button are appearing on small screens (#674)
* Fixes: #673 - Left Side drawer and icon button are appearing on small screens

* made a seperate css file for that

* made a seperate css file for that

* resize the drawer app bar

--- a/src/components/ChatApp/Settings/Settings.css
+++ b/src/components/ChatApp/Settings/Settings.css
@@ -3,13 +3,3 @@
     margin-top: 21px;
     display: block;
 }
-
-.topAppBar button{
-    display: none !important;
-}
-
-.topAppBar div div div button {
-    display: block !important;
-    visibility: visible;
-    box-shadow: none;
-}
